# azure_cosmos_sdk

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: collection.rs  create_delete_database.rs  document00.rs  document_entries00.rs  query_document00.rs
src/: client.rs  collection.rs  get_document.rs  lib.rs  list_documents.rs  partition_key.rs  query_document.rs  request_response.rs
